fix HTML validator errors

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                 <a href="#symptom-check" class="btn btn-light" role="button" tabindex="0">How are you feeling?</a>
             </div>
         </div>
-        </div>
     </header>
 
     <!-- Main content holding all sections -->
@@ -496,9 +495,9 @@
         <div class="row justify-content-center">
             <div class="col-12 col-xl-8 text-center">
                 <h2>Still Stuck?</h2>
-                If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental
-                health professional can make a real difference. Here are some resources to help you take that next
-                step.</p>
+                <p>If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental
+                    health professional can make a real difference. Here are some resources to help you take that next
+                    step.</p>
                 <button type="button" class="btn custom-button-outline mb-4" data-bs-toggle="modal"
                     data-bs-target="#professional-help-modal">Find
                     Professional Help</button>
@@ -534,8 +533,8 @@
     </footer>
 
     <!-- Modal for Professional Help section -->
-    <div class="modal fade" id="professional-help-modal" tabindex="-1" aria-labelledby="professionalHelpModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="professional-help-modal" tabindex="-1" role="dialog"
+        aria-labelledby="professionalHelpModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header justify-content-center">
