Enhance symptom check section with responsive card layout and equal height styling

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-12"></div>
                 <h2>Symptom Check</h2>
                 <p>Assess your mental health with our quick symptom checker.</p>
-                <div class="col-12 col-md-6 col-xl-3">
+                <div class="col-12 col-md-6 col-xl-3 mb-4">
                     <div class="card bg-transparent">
                         <img src="assets/images/stress.png" class="mx-auto card-img-top"
                             alt="Icon of a stressed person">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
+                <div class="col-12 col-md-6 col-xl-3 mb-4">
                     <div class="card bg-transparent">
                         <img src="assets/images/anxiety.png" class="mx-auto card-img-top"
                             alt="Icon of an anxious person">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
+                <div class="col-12 col-md-6 col-xl-3 mb-4">
                     <div class="card bg-transparent">
                         <img src="assets/images/lonely.png" class="mx-auto card-img-top" alt=" Icon of a lonely person">
                         <div class="card-body">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
+                <div class="col-12 col-md-6 col-xl-3 mb-4">
                     <div class="card bg-transparent">
                         <img src="assets/images/low-mood.png" class="mx-auto card-img-top"
                             alt="Icon of a person with low mood">
