Update title modal styling for consistency

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header justify-content-center">
-                    <h1 class="modal-title fs-5" id="professionalHelpModalLabel">Professional Help Resources</h1>
+                    <h2 class="modal-title" id="professionalHelpModalLabel">Professional Help Resources</h2>
                     <button type="button" class="btn-close custom-button-outline position-absolute end-0 me-3"
                         data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
