--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="col-12 text-center">
                 <h1>Welcome to Calm Compass</h1>
                 <p>Start understanding your mind with simple, accessible information.</p>
-                <a href="#symptom-check" class="btn btn-light" role="button" tabindex="0">How are you feeling?</a>
+                <a href="#symptom-check" class="btn btn-light" role="button">How are you feeling?</a>
             </div>
         </div>
     </header>
@@ -72,9 +72,10 @@
         <!-- Symptom Check section -->
         <section id="symptom-check" class="container section">
             <div class="row">
-                <div class="col-12"></div>
-                <h2>Symptom Check</h2>
-                <p>Assess your mental health with our quick symptom checker.</p>
+                <div class="col-12">
+                    <h2>Symptom Check</h2>
+                    <p>Assess your mental health with our quick symptom checker.</p>
+                </div>
                 <div class="symptom-card col-12 col-md-6 col-xl-3 mb-4">
                     <div class="card bg-transparent">
                         <img src="assets/images/stress.png" class="mx-auto card-img-top"
@@ -495,9 +496,9 @@
         <div class="row justify-content-center">
             <div class="col-12 col-xl-8 text-center">
                 <h2>Still Stuck?</h2>
-                <p>If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental
-                    health professional can make a real difference. Here are some resources to help you take that next
-                    step.</p>
+                <p>If you're struggling with persistent symptoms or feel overwhelmed, speaking to a mental health
+                    professional can make a real difference. Here are some resources to help you take that next step.
+                </p>
                 <button type="button" class="btn custom-button-outline mb-4" data-bs-toggle="modal"
                     data-bs-target="#professional-help-modal">Find
                     Professional Help</button>
@@ -574,7 +575,7 @@
     </div>
 
     <!-- Bootstrap -->
-    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
         </script>
 
